# research-atlas

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
analysis/: README.md  funding_landscape.py  pi_resolution.json  ranking_eval.json  ranking_graph.json  results.json  run.py
atlas/: __init__.py  analysis.py  award_match.py  bulkwrite.py  consolidate.py  manifest.py  ror.py  ror_bulk.py  schema.py
data/: MANIFEST.json
docs/: ARCHITECTURE.md  COMPLETENESS.md  GRAPH.md  LANDSCAPE.md  SCHEMA.md  USERS_NEEDS.md  USERS_POLICY.md  VALIDATION.md
scripts/: build_all.py  build_db.py  build_sample.py  build_users.py  build_users_sample.py  consolidate.py  crossfield_figure.py  crossfield_report.py  crossfield_run.py  enrich_contacts.py  ingest_cordis.py  ingest_czi.py  ingest_dfg.py  ingest_dfg_full.py  ingest_erc.py  ingest_gates.py  ingest_nih.py  ingest_nsf.py  ingest_nsf_bulk.py  ingest_openalex_works.py  ingest_sloan.py  ingest_ukri.py  ingest_ukri_full.py  ingest_wellcome.py  landscape_report.py  query.py  ranking_build.py  ranking_build_sample.py  ranking_embed.py  ranking_evaluate.py  ranking_ingest_corpus.py  ranking_report.py  resolve_pis.py  resolve_ror.py  validate.py
tests/: test_atlas_api_queries.py  test_award_match.py  test_bulkwrite.py  test_cordis_normalizer.py  test_crossfield.py  test_czi_normalizer.py  test_dfg_normalizer.py  test_erc_normalizer.py  test_funder_specialization.py  test_funding_careers.py  test_funding_landscape.py  test_gates_normalizer.py  test_nih_normalizer.py  test_pi_resolve.py  (+14 more)
(+92 files in other folders)
